--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "bithumb-interface",
+  "name": "@bithumb/interface",
+  "description": "Bithumb Interface",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,10 +16,25 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/rebass": "^4.0.6",
+    "@types/styled-components": "^5.1.3",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "rebass": "^4.0.7",
+    "redux": "^4.0.5",
+    "redux-localstorage-simple": "^2.2.0",
+    "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
+  },
+  "devDependencies": {},
+  "resolutions": {
+    "styled-components": "^5"
   },
   "scripts": {
     "start": "react-scripts start",
