--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "@types/rebass": "^4.0.6",
     "@types/styled-components": "^5.1.3",
     "bootstrap": "^4.5.2",
@@ -25,6 +26,7 @@
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "rebass": "^4.0.7",
     "redux": "^4.0.5",
