--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@popperjs/core": "^2.4.4",
+    "@reach/dialog": "^0.11.2",
+    "@reach/portal": "^0.11.2",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -18,16 +21,26 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
     "@types/rebass": "^4.0.6",
     "@types/styled-components": "^5.1.3",
     "bootstrap": "^4.5.2",
+    "polished": "^3.6.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
+    "react-ga": "^3.1.2",
+    "react-popper": "^2.2.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.16",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "rebass": "^4.0.7",
     "redux": "^4.0.5",
     "redux-localstorage-simple": "^2.2.0",
