--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.11.2",
     "@reach/portal": "^0.11.2",
+    "@material-ui/core": "^4.11.0",
+    "@polkadot/api": "^1.32.1",
+    "@polkadot/extension-dapp": "^0.33.4",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -25,8 +29,10 @@
     "@types/react-window": "^1.8.2",
     "@types/rebass": "^4.0.6",
     "@types/styled-components": "^5.1.3",
+    "add": "^2.0.6",
     "bootstrap": "^4.5.2",
     "polished": "^3.6.6",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-device-detect": "^1.12.1",
@@ -41,17 +47,19 @@
     "react-use-gesture": "^7.0.16",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
+    "react-toastify": "^6.0.8",
     "rebass": "^4.0.7",
     "redux": "^4.0.5",
     "redux-localstorage-simple": "^2.2.0",
     "styled-components": "^5.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "^4.0.2",
+    "yarn": "^1.22.5"
   },
   "devDependencies": {},
   "resolutions": {
     "styled-components": "^5"
   },
-  "scripts": {
+"scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
