--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@popperjs/core": "^2.4.4",
-    "@reach/dialog": "^0.11.2",
-    "@reach/portal": "^0.11.2",
     "@material-ui/core": "^4.11.0",
     "@polkadot/api": "^1.32.1",
     "@polkadot/extension-dapp": "^0.33.4",
+    "@popperjs/core": "^2.4.4",
+    "@reach/dialog": "^0.11.2",
+    "@reach/portal": "^0.11.2",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -31,23 +31,27 @@
     "@types/styled-components": "^5.1.3",
     "add": "^2.0.6",
     "bootstrap": "^4.5.2",
-    "polished": "^3.6.6",
+    "i18next": "^19.7.0",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.20",
+    "polished": "^3.6.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-ga": "^3.1.2",
+    "react-i18next": "^11.7.2",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
+    "react-toastify": "^6.0.8",
     "react-use-gesture": "^7.0.16",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
-    "react-toastify": "^6.0.8",
     "rebass": "^4.0.7",
     "redux": "^4.0.5",
     "redux-localstorage-simple": "^2.2.0",
@@ -59,7 +63,7 @@
   "resolutions": {
     "styled-components": "^5"
   },
-"scripts": {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
