--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "styled-components": "^5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --no-cache",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
