--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/rebass": "^4.0.6",
     "@types/styled-components": "^5.1.3",
     "add": "^2.0.6",
+    "bignumber.js": "^9.0.0",
     "bootstrap": "^4.5.2",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
