--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-feather": "^2.0.8",
     "react-ga": "^3.1.2",
     "react-i18next": "^11.7.2",
+    "react-loading": "^2.0.3",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
