Update project description

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bithumb/interface",
-  "description": "Clover",
+  "description": "Clover Interface",
   "homepage": ".",
   "version": "0.1.0",
   "private": true,
