--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
     "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.161",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
     "@types/rebass": "^4.0.6",
-    "@types/styled-components": "^5.1.3",
     "add": "^2.0.6",
     "bignumber.js": "^9.0.0",
     "bootstrap": "^4.5.2",
@@ -58,7 +56,13 @@
     "typescript": "^4.0.2",
     "yarn": "^1.22.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/react": "^16.9.49",
+    "@types/styled-components": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint-plugin-react": "^7.21.2"
+  },
   "resolutions": {
     "styled-components": "^5"
   },
