Update readme, refine ui, and fix hang during input swap amount

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bithumb/interface",
-  "description": "Clover Interface",
+  "name": "@clover/clover-ui",
+  "description": "Clover UI",
   "homepage": ".",
   "version": "0.1.0",
   "private": true,
