--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@material-ui/core": "^4.11.0",
     "@polkadot/api": "^1.32.1",
     "@polkadot/extension-dapp": "^0.33.4",
+    "@polkadot/ui-keyring": "^0.60.1",
+    "@polkadot/ui-settings": "^0.60.1",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.11.2",
     "@reach/portal": "^0.11.2",
@@ -67,7 +69,7 @@
     "styled-components": "^5"
   },
   "scripts": {
-    "start": "react-scripts start --no-cache",
+    "start": "PORT=3006 react-scripts start --no-cache",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
